overflow bug fix to contain bleeding margin

--- a/restart/_webparts.scss
+++ b/restart/_webparts.scss
@@ -11,6 +11,7 @@
 			color: $darkblue;
 			background: white;
 			justify-content: space-between;
+			overflow: hidden;
 			.bi.bi-plus {
 				transition: 0.25s all;
 				font-size: 2.5rem;
